# wizard_claude

./: .gitignore  PLAN.md  Wizard game plan.md  card-game-layout.html
.claude/docs/: project1-notes.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a56f149cc9ba_initial_schema.py
backend/app/: database.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  game.py  player.py  round.py
backend/app/routers/: games.py  ws.py
backend/app/schemas/: game.py
backend/app/services/: deck.py  game_engine.py  handlers.py  room_manager.py  scoring.py
backend/tests/: test_deck.py  test_game_engine.py  test_scoring.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: BidModal.tsx  Card.tsx  EmotePicker.tsx  GameOver.tsx  Hand.tsx  PlayerHud.tsx  PlayerStrip.tsx  RoundResult.tsx  Scoreboard.tsx  TrickArea.tsx  TrumpChooser.tsx  WizardCard.tsx
frontend/src/components/table/: BidPanel.tsx  CenterPile.tsx  OpponentSeat.tsx  QuickChat.tsx  StackedLayout.tsx  TableLayout.tsx  TrumpHolder.tsx  viewModel.ts
frontend/src/hooks/: useFitScale.ts  useGameWS.ts  useMediaQuery.ts
frontend/src/pages/: Game.tsx  Home.tsx  Lobby.tsx  WizardCardsShowcase.tsx
frontend/src/store/: gameStore.ts
frontend/src/theme/: tableTheme.ts
frontend/src/types/: game.ts
frontend/src/utils/: cards.ts  emotePhrases.ts  sound.ts  trick.ts
